--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^11.11.17",
     "lucide-react": "^0.454.0",
     "next": "14.2.6",
     "react": "^18",
