--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.0",
@@ -30,6 +31,7 @@
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.454.0",
     "next": "14.2.6",
+    "next-themes": "^0.4.3",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
