--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.17",
+    "geist": "^1.3.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.6",
     "next-themes": "^0.4.3",
